# HATPEHDA

./: .gitignore  CMakeLists.txt  README.md  README.txt  all.sh  kill.sh  package.xml  run_cook_appendix_scenario_A.sh  run_cook_scenario_A.sh  run_cook_scenario_B.sh  run_delay_example.sh  run_full_box_domain.sh  run_full_car_domain.sh  run_full_cook_domain.sh  setup.py  test.py  test.xml  test_runner.py
domains/coffee/: coffee_human_no_goal.py  coffee_instant_brew_human.py
domains_and_results/: CommonModule.py  ConcurrentModule.py  box_prepare.py  car_maintenance.py  cart_hoffman.py  choice_updater.py  conflict_pick.py  cooking_pasta.py  dom_name.p  exec_automaton.py  log.conf  merge_plotter.py  new_cart.py  new_render_graph.py  perf_empiler.py  plot_performance.py  plotter.py  policy_fake_human_free_early.p  policy_human_free_early.p  policy_human_min_work.p  policy_real_human_free_early.p  policy_task_end_early.p  render.py  render_graph.py  script_perf.sh  script_update.sh  search_space.p  set_debug_level.py  simpler.py  solution_checker.py  stack_box.py  stack_empiler.py  stack_empiler_1.py  stack_empiler_2.py  stack_equi.py  stack_paper_task.py  stack_simple_simu.py  stack_simu_new.py  stats.py  test_tn.py
hatpehda/: CommonModule.py  NodeModule.py  __init__.py  causal_links_post_treatment.py  gui.py  hatpehda.py  reg.py  reg_mock.py  ros.py  standard_domains.py  task_network.py
other_domains/: blocks_world_methods.py  blocks_world_methods2.py  blocks_world_operators.py  simple_travel_example.py
progress/: testing.py
test/: tests.py
(+6017 files in other folders)
